# management-personal-debts

./: .gitignore  README.md  docker-compose.yml  main.py  requirements.txt
backend/: main.py  pyproject.toml
backend/src/: app.py
backend/src/config/: config.py
backend/src/controller/: auth_controller.py  category_controller.py  debts_controller.py  payments_historic_controller.py  user_controller.py
backend/src/model/: __init__.py  attachments.py  categories.py  debts.py  payments_history.py  relationships.py  users.py
backend/src/repository/: repository.py
backend/src/router/: router.py
backend/src/schema/: schema.py
backend/src/service/: authentication_service.py  category_service.py  debts_service.py  payment_historic_service.py  user_service.py
backend/src/shared/: shared.py
src/: app.py
src/controller/: auth_controller.py  category_controller.py  debts_controller.py  payments_historic_controller.py  user_controller.py
src/model/: categories.py  debts.py  payments_history.py  users.py
src/repository/: repository.py
src/router/: router.py
src/schema/: schema.py
src/service/: authentication_service.py  category_service.py  debts_service.py  payment_historic_service.py  user_service.py
