[tool.poetry]
name = "management-personal-debts"
version = "0.1.0"
description = ""
authors = ["Romario Vieira <tc.romario.vieira@gruponc.net.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pytz = "^2024.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
pyjwt = "^2.10.1"
psycopg2-binary = "^2.9.10"
bcrypt = "4.0.1"
passlib = "1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
